# mio-tts-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ja.md  WORK_LOG.md  build.sh  clean.sh  models_download.sh  requirements.txt  setup.sh
examples/android/: README.md
examples/android/MioTTSCppDemoAndroid/: .gitignore  README.md  settings.gradle.kts
examples/android/MioTTSCppDemoAndroid/app/: build.gradle.kts
examples/android/MioTTSCppDemoAndroid/app/src/main/: AndroidManifest.xml
examples/android/MioTTSCppDemoAndroid/app/src/main/cpp/: CMakeLists.txt  mio_tts_android_jni.cpp
examples/android/MioTTSCppDemoAndroid/app/src/main/java/com/example/miottscpp/: MainActivity.kt  NativeMioEngine.kt  WavRecorder.kt
examples/android/MioTTSCppDemoAndroid/app/src/main/res/drawable/: app_icon.xml
examples/android/MioTTSCppDemoAndroid/app/src/main/res/layout/: activity_main.xml
examples/android/MioTTSCppDemoAndroid/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
examples/android/MioTTSCppDemoAndroid/gradle/: libs.versions.toml
examples/swiftui/: README.md  build.sh
examples/swiftui/MioTTSCppDemo/: ContentView.swift  MioTTSClient.swift  MioTTSCppDemo-Bridging-Header.h  MioTTSCppDemoApp.swift  README.md
examples/swiftui/MioTTSCppDemo.xcodeproj/: project.pbxproj
examples/swiftui/MioTTSCppDemo/Native/: MioTTSLocalBridge.h  MioTTSLocalBridge.mm
examples/swiftui/MioTTSCppDemo/Resources/Embeddings/: en_female.emb.gguf  en_male.emb.gguf
examples/wasm/: .gitignore  README.md  build.sh  index.html  miottscpp.js
examples/wasm/public/embeddings/: index.json.example
examples/wasm/wasm/: miottscpp_core.cpp
models/: jp_female.emb.gguf  jp_male.emb.gguf
scripts/: README.md  convert_miocodec_to_gguf.py  convert_preset_embedding_to_gguf.py  convert_wavlm_base_plus_to_gguf.py
src/: ggml-graph-copy-host.h  mio-tts-lib.cpp  mio-tts-lib.h  mio-tts-mobile-shared.hpp  miocodec-decoder.cpp  miocodec-decoder.h  tts-mio-cli.cpp  tts-mio-server.cpp  wavlm-extractor.cpp  wavlm-extractor.h
tests/: run-tts-server.sh  test_miotts-cli.sh  test_performance.sh
